[gd_scene load_steps=36 format=3 uid="uid://rpl5amivov5f"]

[ext_resource type="Script" path="res://Scripts/Entities/player.gd" id="1_7gcer"]
[ext_resource type="Script" path="res://Scripts/Player Functions/CamNode3D.gd" id="2_to3yv"]
[ext_resource type="Shader" path="res://Shaders/pixelate.gdshader" id="4_1o6bh"]
[ext_resource type="Texture2D" uid="uid://b8s3alecsxgvs" path="res://textures/damagered.png" id="4_va571"]
[ext_resource type="Script" path="res://Scripts/Player Functions/meshinterpolation.gd" id="4_xd1iw"]
[ext_resource type="FontFile" uid="uid://chmmoxarhiqij" path="res://Assets/Fonts/Neothic.ttf" id="5_c8oxv"]
[ext_resource type="Shader" path="res://Shaders/post_processing.gdshader" id="5_suoog"]
[ext_resource type="Texture2D" uid="uid://bftoud3mssc1c" path="res://textures/button1x1brown.png" id="6_gbx77"]

[sub_resource type="BoxShape3D" id="BoxShape3D_q3558"]
size = Vector3(0.1, 0.1, 2)

[sub_resource type="Animation" id="Animation_md8la"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_tmr34"]
resource_name = "riflewobble"
length = 1.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667, 0.9, 1.43333),
"transitions": PackedFloat32Array(1.31951, 1.31951, 1.31951, 1.31951),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.01, 0.008, 0), Vector3(0, 0, 0), Vector3(-0.01, 0.008, 0)]
}

[sub_resource type="Animation" id="Animation_noy3w"]
resource_name = "wobble"
length = 1.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.8, 1.26667),
"transitions": PackedFloat32Array(1.31951, 1.31951, 1.31951, 1.31951),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.02, 0.016, 0), Vector3(0, 0, 0), Vector3(-0.02, 0.016, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d0s5x"]
_data = {
"RESET": SubResource("Animation_md8la"),
"riflewobble": SubResource("Animation_tmr34"),
"wobble": SubResource("Animation_noy3w")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8cyek"]
shader = ExtResource("4_1o6bh")
shader_parameter/pixel_size = 2.0

[sub_resource type="Animation" id="Animation_x5ols"]
resource_name = "HP bar shake"
length = 2.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.866633, 1.1, 1.9666, 2.2),
"transitions": PackedFloat32Array(0.755147, 0.755147, 0.755147, 0.755147, 0.755147),
"update": 0,
"values": [Color(1, 1, 1, 0.97044), Color(1, 1, 1, 0.564706), Color(1, 1, 1, 0.564706), Color(1, 1, 1, 0.97044), Color(1, 1, 1, 0.97044)]
}

[sub_resource type="Animation" id="Animation_yyfhu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eglyk"]
_data = {
"HP bar shake": SubResource("Animation_x5ols"),
"RESET": SubResource("Animation_yyfhu")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dhvey"]
shader = ExtResource("4_1o6bh")
shader_parameter/pixel_size = 3.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hp76b"]
shader = ExtResource("5_suoog")
shader_parameter/enabled = true
shader_parameter/dithering = true
shader_parameter/colors = 12
shader_parameter/dither_size = 1

[sub_resource type="LabelSettings" id="LabelSettings_lxquc"]
font = ExtResource("5_c8oxv")
font_size = 50
font_color = Color(0.847474, 0.847474, 0.847474, 0.423529)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wx2fv"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_od6rl"]

[sub_resource type="Animation" id="Animation_j7bud"]
resource_name = "FadeToBlack"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GunLayer/CamNode3D/CanvasLayer/LevelEnd/FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_pvhom"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GunLayer/CamNode3D/CamSmooth/PCamera:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.796454, -0.396346)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GunLayer/CamNode3D/CanvasLayer/LevelEnd/FadeToBlack:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("GunLayer/CamNode3D/CamSmooth:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CollisionShape3D2:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.840963, 0)]
}

[sub_resource type="Animation" id="Animation_m67pr"]
resource_name = "crouch"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.5, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.5, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GunLayer/CamNode3D/CamSmooth/PCamera:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.796454, -0.396346), Vector3(0, -0.296, -0.396)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape3D2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.840963, 0), Vector3(0, -0.124535, 0)]
}

[sub_resource type="Animation" id="Animation_awhfe"]
resource_name = "shield_recoil"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GunLayer/CamNode3D/CamSmooth:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.6),
"transitions": PackedFloat32Array(0.164939, 1.31951, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.020944, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_m131b"]
resource_name = "uncrouch"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.5, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 2.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.5, 0), Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GunLayer/CamNode3D/CamSmooth/PCamera:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.296, -0.396), Vector3(0, 0.796454, -0.396346)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape3D2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.124535, 0), Vector3(0, -0.124535, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ase6f"]
_data = {
"FadeToBlack": SubResource("Animation_j7bud"),
"RESET": SubResource("Animation_pvhom"),
"crouch": SubResource("Animation_m67pr"),
"shield_recoil": SubResource("Animation_awhfe"),
"uncrouch": SubResource("Animation_m131b")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_1q84g"]
size = Vector3(0.75, 0.3, 0.75)

[sub_resource type="Animation" id="Animation_csk3t"]
resource_name = "FadeToBlack"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GunLayer/CamNode3D/CanvasLayer/LevelEnd/FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_shaff"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GunLayer/CamNode3D/CanvasLayer/LevelEnd/FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GunLayer/CamNode3D/CanvasLayer/PopUpText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_u4gn5"]
resource_name = "TextFadeAway"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GunLayer/CamNode3D/CanvasLayer/PopUpText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_w8uab"]
resource_name = "TextPopUp"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GunLayer/CamNode3D/CanvasLayer/PopUpText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a3dey"]
_data = {
"FadeToBlack": SubResource("Animation_csk3t"),
"RESET": SubResource("Animation_shaff"),
"TextFadeAway": SubResource("Animation_u4gn5"),
"TextPopUp": SubResource("Animation_w8uab")
}

[sub_resource type="AudioStream" id="AudioStream_7mvji"]

[node name="Player" type="CharacterBody3D" groups=["Persist", "player"]]
collision_layer = 4
collision_mask = 7
floor_constant_speed = true
floor_max_angle = 0.872665
script = ExtResource("1_7gcer")
weapon_wobble_amount = 0.1
weapon_rotation_amount = 0.03

[node name="GunLayer" type="CanvasLayer" parent="."]

[node name="CamNode3D" type="Node3D" parent="GunLayer"]
unique_name_in_owner = true
script = ExtResource("2_to3yv")
follow_target = NodePath("../..")

[node name="CamSmooth" type="Node3D" parent="GunLayer/CamNode3D"]
unique_name_in_owner = true

[node name="PCamera" type="Camera3D" parent="GunLayer/CamNode3D/CamSmooth"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, -7.10543e-15, 0, 7.10543e-15, 1, 0, 0.796454, -0.396346)
cull_mask = 1048573
fov = 90.0

[node name="Interact" type="RayCast3D" parent="GunLayer/CamNode3D/CamSmooth/PCamera"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 7.10543e-15, 0, -7.10543e-15, 1, 0, -0.00645399, 0.396346)
target_position = Vector3(0, 0, -2)
hit_from_inside = true
collide_with_areas = true

[node name="InteractWindowDetect" type="Area3D" parent="GunLayer/CamNode3D/CamSmooth/PCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 7.10543e-15, 0, -7.10543e-15, 1, 0, 0, -0.604)
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="GunLayer/CamNode3D/CamSmooth/PCamera/InteractWindowDetect"]
shape = SubResource("BoxShape3D_q3558")

[node name="SubViewportContainer" type="SubViewportContainer" parent="GunLayer/CamNode3D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="GunLayer/CamNode3D/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="GunCam" type="Camera3D" parent="GunLayer/CamNode3D/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.796454, -0.396346)
cull_mask = 2
fov = 90.0

[node name="WeaponBobble" type="Node3D" parent="GunLayer/CamNode3D/SubViewportContainer/SubViewport/GunCam"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, -7.10543e-15, 0, 7.10543e-15, 1, 0, 0, 0)

[node name="Bobbloid" type="AnimationPlayer" parent="GunLayer/CamNode3D/SubViewportContainer/SubViewport/GunCam/WeaponBobble"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_d0s5x")
}

[node name="CanvasLayer2" type="CanvasLayer" parent="GunLayer/CamNode3D"]

[node name="Pixelate" type="ColorRect" parent="GunLayer/CamNode3D/CanvasLayer2"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_8cyek")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CanvasLayer" type="CanvasLayer" parent="GunLayer/CamNode3D"]

[node name="CenterContainer" type="CenterContainer" parent="GunLayer/CamNode3D/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="TextureRect" parent="GunLayer/CamNode3D/CanvasLayer/CenterContainer"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="Deathscreen" type="Control" parent="GunLayer/CamNode3D/CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="GunLayer/CamNode3D/CanvasLayer/Deathscreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="GunLayer/CamNode3D/CanvasLayer/Deathscreen/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -23.0
offset_right = 70.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
theme_override_font_sizes/font_size = 31
text = "You Died"
horizontal_alignment = 1

[node name="Quit" type="Button" parent="GunLayer/CamNode3D/CanvasLayer/Deathscreen"]
process_mode = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -53.0
offset_top = 123.0
offset_right = 53.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 68
text = "Quit"

[node name="magtext" type="Label" parent="GunLayer/CamNode3D/CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -47.0
offset_right = -4.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 34

[node name="Health" type="Control" parent="GunLayer/CamNode3D/CanvasLayer" groups=["hud"]]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthAnims" type="AnimationPlayer" parent="GunLayer/CamNode3D/CanvasLayer/Health"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_eglyk")
}

[node name="TextureRect" type="TextureRect" parent="GunLayer/CamNode3D/CanvasLayer/Health"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_va571")

[node name="LevelEnd" type="Control" parent="GunLayer/CamNode3D/CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="FadeToBlack" type="ColorRect" parent="GunLayer/CamNode3D/CanvasLayer/LevelEnd"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="Pixelate Hud" type="ColorRect" parent="GunLayer/CamNode3D/CanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_dhvey")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DashText" type="Label" parent="GunLayer/CamNode3D/CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Press shift to dash"

[node name="PopUpText" type="Label" parent="GunLayer/CamNode3D/CanvasLayer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -180.0
offset_right = 54.0
offset_bottom = -137.0
grow_horizontal = 2
grow_vertical = 0
text = "Filler"

[node name="PopUpTimer" type="Timer" parent="GunLayer/CamNode3D/CanvasLayer/PopUpText"]
one_shot = true

[node name="InteractPrompt" type="NinePatchRect" parent="GunLayer/CamNode3D/CanvasLayer"]
unique_name_in_owner = true
visible = false
texture_filter = 1
material = SubResource("ShaderMaterial_hp76b")
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -113.0
offset_top = -110.0
offset_right = 113.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_gbx77")
region_rect = Rect2(0, 42.4912, 1024, 148.448)
patch_margin_top = 8
patch_margin_bottom = 8

[node name="InteractText" type="Label" parent="GunLayer/CamNode3D/CanvasLayer/InteractPrompt"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -16.5
offset_right = 187.0
offset_bottom = 36.5
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0287648
scale = Vector2(0.6, 0.6)
text = "Interact"
label_settings = SubResource("LabelSettings_lxquc")
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="GunLayer/CamNode3D/CanvasLayer"]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -360.0
offset_top = -120.0
offset_right = -180.0
offset_bottom = -60.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(2, 2)
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="BulletCounter" type="VBoxContainer" parent="GunLayer/CamNode3D/CanvasLayer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_wx2fv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_od6rl")
script = ExtResource("4_xd1iw")

[node name="PlayerAnim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ase6f")
}

[node name="DashLength" type="Timer" parent="."]
wait_time = 0.267
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SMGShootCooldown" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.06
one_shot = true

[node name="StairsForward" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45, -0.789556)
target_position = Vector3(0, -0.55, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.596649, 0)
light_color = Color(1, 1, 0.870588, 1)
light_energy = 4.0
light_indirect_energy = 5.0
distance_fade_enabled = true
omni_range = 69.015

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.840963, 0)
shape = SubResource("BoxShape3D_1q84g")

[node name="HudAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a3dey")
}

[node name="FootstepBackup" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
stream = SubResource("AudioStream_7mvji")
volume_db = -80.0
unit_size = 1.0
pitch_scale = 0.8

[node name="CrouchCheck" type="RayCast3D" parent="."]
unique_name_in_owner = true
target_position = Vector3(0, 1, 0)
hit_from_inside = true

[node name="HealthRegen" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="Footstep" type="AudioStreamPlayer" parent="."]
volume_db = -14.0
bus = &"World"

[connection signal="body_entered" from="GunLayer/CamNode3D/CamSmooth/PCamera/InteractWindowDetect" to="." method="_on_interact_window_detect_body_entered"]
[connection signal="body_exited" from="GunLayer/CamNode3D/CamSmooth/PCamera/InteractWindowDetect" to="." method="_on_interact_window_detect_body_exited"]
[connection signal="pressed" from="GunLayer/CamNode3D/CanvasLayer/Deathscreen/Quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="GunLayer/CamNode3D/CanvasLayer/Health/HealthAnims" to="." method="_on_health_anims_animation_finished"]
[connection signal="timeout" from="GunLayer/CamNode3D/CanvasLayer/PopUpText/PopUpTimer" to="." method="_on_pop_up_timer_timeout"]
[connection signal="animation_finished" from="PlayerAnim" to="." method="_on_player_anim_animation_finished"]
[connection signal="timeout" from="DashLength" to="." method="_on_dash_length_timeout"]
[connection signal="animation_finished" from="HudAnim" to="." method="_on_hud_anim_animation_finished"]
[connection signal="finished" from="FootstepBackup" to="." method="_on_footstep_finished"]
[connection signal="timeout" from="HealthRegen" to="." method="_on_health_regen_timeout"]
[connection signal="finished" from="Footstep" to="." method="_on_footstep_finished"]
